force-app/main/default/objects/Event_GDPR__mdt/Event_GDPR__mdt.object-meta.xml
<CustomObject>
    <description>To store the Event GDPR content based on the business area.</description>
    <label>Event GDPR</label>
    <pluralLabel>Events GDPR</pluralLabel>
</CustomObject>