force-app/main/default/objects/Event_GDPR__mdt/fields/Consent_Required_to_Register__c.field-meta.xml
<CustomField>
    <fullName>Consent_Required_to_Register__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set Consent is required or not for particular GDPR Statement Used.</description>
    <label>Consent Required to Register</label>
    <type>Checkbox</type>
</CustomField>