force-app/main/default/objects/Event_GDPR__mdt/fields/Declaration_Text__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Text__c</fullName>
    <label>Declaration Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>