force-app/main/default/objects/Event_GDPR__mdt/fields/GDPR_Statement_Used__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Statement_Used__c</fullName>
    <description>Business Area Picklist values.</description>
    <label>GDPR Statement Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>