force-app/main/default/objects/Event_GDPR__mdt/fields/Statement_Text_above_dec__c.field-meta.xml
<CustomField>
    <fullName>Statement_Text_above_dec__c</fullName>
    <description>Statement Text according to picklist value.</description>
    <label>Statement Text (above dec)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>