force-app/main/default/objects/Event_GDPR__mdt/fields/Statement_Text_below_dec__c.field-meta.xml
<CustomField>
    <fullName>Statement_Text_below_dec__c</fullName>
    <label>Statement Text (below dec)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>