force-app/main/default/objects/Event_GDPR__mdt/fields/Statement_Title__c.field-meta.xml
<CustomField>
    <fullName>Statement_Title__c</fullName>
    <label>Statement Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>